<resources>
    <string name="app_name">TheKitchen</string>

    //Bottom menu
    <string name="home_title">Главная</string>
    <string name="catalog_title">Поиск</string>
    <string name="search_title">Поиск</string>
    <string name="shopping_list_title">Список</string>
    <string name="shopping_list_title_full">Список покупок</string>
    <string name="favorites_title">Избранное</string>

    //Toolbar menu
    <string name="profile">Профиль</string>
    <string name="filters">Фильтры</string>
    <string name="erase">Сбросить</string>
    <string name="share">Поделиться</string>
    <string name="clearList">Очистить список</string>

    //Home
    <string name="home_title_catalog">Каталог</string>
    <string name="home_title_catalog_time">Быстрые рецепты</string>
    <string name="home_title_new">Попробуйте новое</string>
    <string name="home_snackbar_text">Данное действие доступно только для авторизованных пользователей</string>
    <string name="home_snackbar_action">Авторизоваться</string>
    <string name="link_practice">Проект разработан в рамках Pineapple Practice</string>

    //Recipe Preview
    <string name="warning">Содержит исключенный ингредиент</string>
    <string name="time">%d мин</string>
    <string name="kkal">%d Ккал в порции</string>
    <string name="retry_button">Нажмите для перезагрузки</string>

    //Filters
    <string name="filters_title_time">Время готовки</string>
    <string name="filters_title_dish">Категории</string>
    <string name="filters_title_exclude">Ограничения</string>
    <string name="filters_applay_button">Применить</string>

    //Favorites
    <string name="ups">Ваш список пока что пуст :(</string>
    <string name="favorites_empty_text">Пополните его нажав на сердечко\nв карточке любого рецепта</string>
    <string name="favorites_share_title">Поделиться:</string>
    <string name="favorites_share_message">А это мои любимые рецепты: \n%s</string>

    //Auth
    <string name="auth_copyright">Зарегистрировавшись, вы соглашаетесь с Условиями обслуживания и Политикой конфиденциальности</string>
    <string name="auth_slogan">Лучшие рецепты\nдля вкусной жизни</string>
    <string name="sign_in_with_google_button">Продолжить с Google</string>
    <string name="anonymous_button">Продолжить без авторизации</string>

    //Recipe
    <string name="recipe_title_description">Описание блюда</string>
    <string name="recipe_title_ingridients">Ингредиенты</string>
    <string name="recipe_title_steps">Пошаговый рецепт</string>
    <string name="recipe_kkal">%d Ккал/порция</string>
    <string name="ingredient_count">%s %s</string>
    <string name="ingredient_adding">Добавить в список покупок</string>
    <string name="step_title">Шаг %s</string>
    <string name="portion_calculator_title">Количество порций</string>
    <string name="portion_default">0</string>
    <string name="link">Источник</string>
    <string name="ingredient_adding_success">Продукты успешно добавлены в список покупок</string>
    <string name="ingredient_adding_failure">Не удалось добавить продукты в список покупок</string>

    //Profile
    <string name="profile_title_history">История просмотра</string>
    <string name="profile_title_exclude">Мои предпочтения</string>
    <string name="profile_sign_out">Выйти</string>
    <string name="profile_delete_success">"Профиль был успешно удален"</string>
    <string name="profile_edit_name_success">"Имя пользователя было успешно изменено"</string>
    <string name="profile_delete_user">Удалить профиль</string>
    <string name="profile_ups">Ваша история просмотров пуста</string>
    <string name="profile_dialog_title">Удалить профиль</string>
    <string name="profile_dialog_text">Вы уверены, что хотите удалить свой профиль?</string>
    <string name="profile_dialog_action_cancel">Отменить</string>
    <string name="profile_dialog_action_auth">Удалить</string>

    //Shopping list
    <string name="shopping_empty_text">Пополните его автоматически\nиз карточки рецепта или добавьте\nпродукты нажав на «+»</string>
    <string name="shopping_select_all">Выбрать все</string>
    <string name="shopping_clear">Очистить выбранные</string>
    <string name="shopping_clear_success">Продукты успешно удалены из списка покупок</string>
    <string name="shopping_clear_failure">Не удалось удалить продукты из списка покупок</string>
    <string name="shopping_share_text">Список покупок: \n%s</string>

    //Shopping dialog
    <string name="shopping_dialog_title_edit">Редактирование</string>
    <string name="shopping_dialog_title_add">Добавление</string>
    <string name="shopping_dialog_action_edit">Изменить</string>
    <string name="shopping_dialog_action_add">Добавить</string>
    <string name="shopping_dialog_action_cancel">Отменить</string>
    <string name="shopping_dialog_field_name">Название</string>
    <string name="shopping_dialog_field_count">Количество</string>
    <string name="shopping_dialog_field_unit">Ед.измерения</string>
    <string name="shopping_dialog_field_error">Заполните это поле</string>
    <string name="content_description_end_icon">Очистить поле</string>



    //Menu Items
    <string name="sign_out_item">Sign-out</string>

    //Fragments
    <string name="profile_fragment">My Profile</string>
    <string name="movie_fragment">Movie Details</string>

    //TextViews
    <string name="authentication">Authentication</string>

    //Dummy Data
    <string name="user_name">Alex Mamo</string>
    <string name="product_name">Cloud Firestore</string>
    <string name="movie_name">Lighting Shadows (2009)</string>
    <string name="movie_overview">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="movie_rating">9.2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>