<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@id/home"
        android:title="@string/home_title"
        android:icon="@drawable/ic_home"
        android:menuCategory="secondary"
        />
    <item android:id="@id/catalog"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        android:menuCategory="secondary"
        />
    <item android:id="@id/favorites"
        android:title="@string/favorites_title"
        android:icon="@drawable/ic_favorites"
        android:menuCategory="secondary"
        />
    <item android:id="@id/shopping_list"
        android:title="@string/shopping_list_title"
        android:icon="@drawable/ic_shopping_list"
        android:menuCategory="secondary"/>

</menu>