<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_shadow"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/shopping_dialog_width"
        android:layout_height="@dimen/shopping_dialog_height"
        android:background="@drawable/background_dialog"
        android:elevation="@dimen/shopping_dialog_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialogTitle"
            style="@style/TextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_big_24"
            android:layout_marginTop="@dimen/margin_big_32"
            android:text="@string/profile_dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialogText"
            style="@style/TextButtonSmall.Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_big_24"
            android:layout_marginTop="@dimen/margin_big_24"
            android:text="@string/profile_dialog_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

        <LinearLayout
            android:id="@+id/dialogActionContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big_32"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogText">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialogActionButton"
            style="@style/TextButtonSmall.Center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_big_32"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/profile_dialog_action_auth" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialogCancelButton"
            style="@style/TextButtonSmall.Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/profile_dialog_action_cancel" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>