<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.FiltersFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/filtersAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/filtersToolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/menu_toolbar_fiters">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/filtersNested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fitersContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_basic"
            android:background="@drawable/background_main_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fitersTitleTime"
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_very_big"
                android:text="@string/filters_title_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/filtersTime"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_small"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fitersTitleTime"
                app:singleSelection="true" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fitersTitleDish"
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_very_big"
                android:text="@string/filters_title_dish"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filtersTime" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/filtersDish"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_small"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fitersTitleDish" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fitersTitleExclude"
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_very_big"
                android:text="@string/filters_title_exclude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filtersDish" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/filtersExclude"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_basic"
                android:layout_marginTop="@dimen/margin_small"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fitersTitleExclude" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_very_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filtersExclude" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/filtersApplayButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_basic"
        android:layout_marginBottom="@dimen/margin_very_big"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/filters_applay_button"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title_button"
        android:textStyle="bold"
        app:backgroundTint="@color/purple"
        app:layout_anchor="@id/filtersNested"
        app:layout_anchorGravity="bottom|center"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayExtended" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>